addons/website/static/src/scss/website.scss
/* ... */
// Parallax
.parallax {
    position: relative;

    // TODO this introduces a limitation: no dropdown will be able to
    // overflow. Maybe there is a better way to find.
    &:not(.s_parallax_no_overflow_hidden) {
        overflow: hidden;
    }

    > * {
        position: relative;
    }
    > .s_parallax_bg {
        @include o-position-absolute(0, 0, 0, 0);
        display: block;
        background-color: inherit;
        background-size: cover;
        background-attachment: scroll;
        pointer-events: none;

        &::after {
            content: "";
            @include o-position-absolute(0, 0, 0, 0);
            display: block;
            background-color: inherit;
        }
    }
    @include media-breakpoint-up(xl) {
        // Fixed backgrounds are disabled when using a mobile/tablet device,
        // which is not a big deal but, on some of them (iOS...), defining the
        // background as fixed breaks the background-size/position props.
        // So we enable this only for >= XL devices.
        &.s_parallax_is_fixed > .s_parallax_bg {
            background-attachment: fixed;
        }
    }
}

//
// Layout
//

$-transition-duration: 200ms;

// Affixed Header
.o_header_affixed {
    display: block;
    @include o-position-absolute(0, 0, auto, 0);
    position: fixed;
    z-index: $zindex-modal - 20;
    background: $light;

    &:not(.o_header_no_transition) {
        transition: transform $-transition-duration;
    }

    .navbar-collapse {
        @if o-website-value('header-template') != 'logo_hamburger' {
            max-height: 70vh;
        }
        &.show {
            overflow-y: auto;
        }
    }
    &.o_header_is_scrolled {
        .navbar-brand {
            font-size: $o-theme-navbar-fixed-logo-height / $line-height-base;

            img {
                height: $o-theme-navbar-fixed-logo-height;
            }
        }
        @include media-breakpoint-up(md) {
            @if (index(('menu_logo_below', 'logo_menu_below'), o-website-value('header-template'))) != null {
                .navbar-brand {
                    font-size: 0px;
                    opacity: 0;
                    img {
                        height: 0px;
                    }
                }
            }
        }
    }
    &.o_header_standard.o_header_is_scrolled {
        @if index(('menu_logo_below', 'logo_menu_below'), o-website-value('header-template')) != null {
            .navbar-brand {
                &, img {
                    transition: none;
                }
            }
        }
    }
}
#oe_main_menu_navbar + #wrapwrap .o_header_affixed {
    top: $o-navbar-height;
}

// Navbar
.navbar .o_extra_menu_items.show > ul {
    > li {
        + li {
            border-top: 1px solid gray('200');
        }
        > a.dropdown-toggle {
            background-color: gray('200');
            color: inherit; // Useful when the toggle is active
            pointer-events: none; // hack to prevent clicking on it because dropdown always opened
        }
        > ul { // remove dropdown-menu default style as it is nested in another one
            position: static;
            float: none;
            display: block;
            max-height: none;
            margin-top: 0;
            padding: 0;
            border: none;
            box-shadow: none;
        }
    }
}

// Header templates
header {
    &:not(.o_header_no_transition) {
        .navbar-brand {
            transition: font-size $-transition-duration, opacity $-transition-duration ease-out;

            img {
                transition: height $-transition-duration;
            }
        }
    }

    @include media-breakpoint-up(md) {
        // Allow to center the logo, ignoring the toggler space
        .o_navbar_toggler_container {
            flex: 0 0 0;
            min-width: 0;
        }
    }
    @if index(('hamburger_logo', 'logo_hamburger'), o-website-value('header-template')) {
        .navbar-brand {
            text-align: center;
        }
        .navbar-brand, .logo img {
            margin: auto;
        }
        .navbar-nav {
            margin-top: $spacer / 2;
        }
        @if o-website-value('header-template') == 'logo_hamburger' {
            .o_navbar_toggler_container {
                direction: rtl;
            }
            &:not(.o_header_is_scrolled) .container {
                padding-top: $spacer;
                padding-bottom: $spacer;
            }
            .container {
                transition: padding 200ms;

                #top_menu.navbar-nav {
                    height: 90vh;
                    padding-top : 10vh;
                }
                .dropdown-menu {
                    text-align: center;
                }
            }
        }
    } @else if index(('logo_menu_below', 'menu_logo_below'), o-website-value('header-template')) {
        .navbar-brand {
            text-align: center;
        }
        .navbar-expand-md {
            > .container {
                flex-wrap: wrap;
            }
            .navbar-collapse {
                flex-basis: 100%;
            }
        }
        .navbar-brand, #top_menu.navbar-nav, .logo img {
            margin: auto;
        }
        .navbar-brand {
            @include media-breakpoint-up(md) {
                @if o-website-value('header-template') == 'menu_logo_below' {
                    margin-top: $navbar-padding-y;
                } @else {
                    margin-bottom: $navbar-padding-y;
                }
            }
        }
        @if o-website-value('header-template') == 'menu_logo_below' {
            .navbar-collapse {
                @include media-breakpoint-up(md) {
                    order: -1;
                }
            }
        }
    }
}
/* ... */

